Continuation de AutoEcole, Calendrier, Date, GestionFichier et commencement de l'ecriture des tests